--- a/cached_index.html
+++ b/cached_index.html
@@ -164,11 +164,13 @@
                                 </svg>
                             </div>
                             <div class="home-links-container1">
-                                <a href="#Issues" class="home-link10 Anchor">TOP Issues</a><a href="#Market" class="home-link13 Anchor">TOP Market</a><a href="#Business" class="home-link11 Anchor">TOP Business</a>
-                                <a href="#Countries" class="home-link12 Anchor">TOP countries</a><a href="#Social" class="home-link14 Anchor">Follow more</a>
+                                <a href="#Issues" class="home-link10 Anchor">TOP Issues</a>
+                                <a href="#Market" class="home-link13 Anchor">TOP Market</a>
+                                <a href="#Countries" class="home-link12 Anchor">TOP countries</a>
+                                <a href="#Social" class="home-link14 Anchor">Follow more</a>
                             </div>
                         </div>
-                        <div class="home-right-side"><button class="home-cta-btn10 Anchor button">Log In</button></div>
+                        <div class="home-right-side"><button onclick="window.location.href='/login'" class="home-cta-btn10 Anchor button">Log In</button></div>
                         <div data-role="MobileMenu" class="home-mobile-menu">
                             <div class="home-container11">
                                 <img alt="image" src="https://play.teleporthq.io/static/svg/default-img.svg" class="home-image11" />
@@ -1621,15 +1623,23 @@
                                     <h3 class="home-text53 Card-Heading">Company name</h3>
                                     <span class="home-text54 Card-Text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. </span>
                                     <span class="Anchor">Read More</span>
-
+                                </div>
+                                <div class="company-cluster-preview">
+                                    <h3 class="home-text53 Card-Heading">Company name</h3>
+                                    <span class="home-text54 Card-Text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. </span>
+                                    <span class="Anchor">Read More</span>
                                 </div>
                             </div>
                             <div onclick="openModal(9)" class="home-service-card2">
-                                <div class="home-country2">
-                                </div>
+                                <div class="home-country2"></div>
                                 <div class="home-info2">
                                     <h3 class="home-text55 Card-Heading">Company name</h3>
                                     <span class="home-text56 Card-Text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. </span>
+                                    <span class="Anchor">Read More</span>
+                                </div>
+                                <div class="company-cluster-preview">
+                                    <h3 class="home-text53 Card-Heading">Company name</h3>
+                                    <span class="home-text54 Card-Text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. </span>
                                     <span class="Anchor">Read More</span>
                                 </div>
                             </div>
@@ -1639,6 +1649,11 @@
                                 <div class="home-info3">
                                     <h3 class="home-text57 Card-Heading">Country name</h3>
                                     <span class="home-text58 Card-Text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. </span>
+                                    <span class="Anchor">Read More</span>
+                                </div>
+                                <div class="company-cluster-preview">
+                                    <h3 class="home-text53 Card-Heading">Company name</h3>
+                                    <span class="home-text54 Card-Text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. </span>
                                     <span class="Anchor">Read More</span>
                                 </div>
                             </div>
@@ -4716,8 +4731,8 @@
                                                 <img src="https://img.hankyung.com/photo/202506/01.40719519.1.jpg" class="embed-card-image">
                                                 
                                                 <div class="embed-card-texts">
-                                                <h3>조원태, "새 정부, 美 관세로부터 항공산업 보호 필요" </h3>
-                                                <p>조원태, "새 정부, 美 관세로부터 항공산업 보호 필요" , 러&middot;우 전쟁 종결 후 러시아 영공 통과도 준비 조 회장, IATA 집행위원 3연임</p>
+                                                <h3>조원태 "새 정부, 美 관세로부터 항공산업 보호 필요" </h3>
+                                                <p>조원태 "새 정부, 美 관세로부터 항공산업 보호 필요" , 러&middot;우 전쟁 종결 후 러시아 영공 통과도 준비 조 회장, IATA 집행위원 3연임</p>
                                                 <small>https://www.hankyung.com/article/202506044781i</small>
                                                 </div>
                                             </a>
@@ -11796,8 +11811,8 @@
                                             <img src="https://img.hankyung.com/photo/202506/01.40719519.1.jpg" class="embed-card-image">
                                             
                                             <div class="embed-card-texts">
-                                            <h3>조원태, "새 정부, 美 관세로부터 항공산업 보호 필요" </h3>
-                                            <p>조원태, "새 정부, 美 관세로부터 항공산업 보호 필요" , 러&middot;우 전쟁 종결 후 러시아 영공 통과도 준비 조 회장, IATA 집행위원 3연임</p>
+                                            <h3>조원태 "새 정부, 美 관세로부터 항공산업 보호 필요" </h3>
+                                            <p>조원태 "새 정부, 美 관세로부터 항공산업 보호 필요" , 러&middot;우 전쟁 종결 후 러시아 영공 통과도 준비 조 회장, IATA 집행위원 3연임</p>
                                             <small>https://www.hankyung.com/article/202506044781i</small>
                                             </div>
                                         </a>
